upgrade responsive css

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 <body>
     <header>
         <h1>Casa de Câmbio</h1>
+        <div >
+            <label for="text-input" class="container">
+                Digite a Moeda
+                <input type="text" name="text-input" id="text-input" placeholder="BRL">
+                <button id="btn-search">Pesquisar</button>
+               </label>
     </header>
     <main>
-        <div>
-            <label for="text-input">Digite a Moeda</label>
-                <input type="text" name="" id="text-input" placeholder="BRL">
-            
-            <button id="btn-search">Pesquisar</button>
-
         </div>
+
         <div id="box">
             <h2 class="coins-title"></h2>
             <ul class="coins"></ul>
